test/caffeine_lang/corpus/frontend/parser/errors/invalid_extendable_kind.caffeine
_base (Invalid): { vendor: "datadog" }

"test":
  Requires { env: String }
  Provides { value: "x" }
